objects/UNITY_Autopopulate_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Layout_Id__c</fullName>
        <label>Target Field Layout Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UI_Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_DoNotOverwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <label>UNITY Autopopulate Mapping</label>
</CustomObject>